News: Larger Images

--- a/news.html
+++ b/news.html
@@ -80,7 +80,7 @@
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0010-thumb.jpg" alt="Andy B Goode Showreel"></a></TD>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0010-thumb.jpg" alt="Andy B Goode Showreel"></a></TD>
 <TD><DIV class="boxHeading">SUMMER SHOWREEL 2016</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
@@ -91,7 +91,7 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
  
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/thejays0010-thumb.jpg" alt="Andy B Good at Christmas"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="Andy B Good at Christmas"></a></td>
 <td><DIV class="boxHeading">XMAS EVENTS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -102,7 +102,7 @@ Xmas Party: I currently have space for some more Christmas gigs.... so book soon
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0012-thumb.jpg" alt="Andy B Goode offers"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0012-thumb.jpg" alt="Andy B Goode offers"></a></td>
 <td><DIV class="boxHeading">SPECIAL OFFERS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -114,7 +114,7 @@ Free Gigs: This year I am giving a few free gigs to local worthy causes (Hospice
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0014-thumb.jpg" alt="Andy B Goode at Swadlincote"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="Andy B Goode at Swadlincote"></a></td>
 <td><DIV class="boxHeading">SWADLINCOTE INTERNATIONAL FOOD AND DRINK FESTIVAL</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -128,7 +128,7 @@ It's gonna be great.
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Care Homes"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Care Homes"></a></td>
 <td><DIV class="boxHeading">CARE HOMES</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -139,7 +139,7 @@ It's great singing at care homes. See their faces light up as they recognise a f
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0016-thumb.jpg" alt="Andy B Goode in Derby"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0016-thumb.jpg" alt="Andy B Goode in Derby"></a></td>
 <td><DIV class="boxHeading">BIRTHDAY PARTIES</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -150,13 +150,11 @@ Birthday Parties: I have done a few birthday parties over the summer, which were
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0020-thumb.jpg" alt="Andy B Goode at Tamworth"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0020-thumb.jpg" alt="Andy B Goode at Tamworth"></a></td>
 <td><DIV class="boxHeading">FOOD GUSTO FOOD FAIR</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-September 2016<br/>
-<a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds).<br/>
-A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times during the day.<br/>
+September 2016 <a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds). A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times during the day.<br/>
 What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vintage Harmonies and Energetic 1950s Rock n Roll really added to the upbeat atmosphere. The food was so really varied and most tasty. So many spicy flavours. One for next years diary... I need some of those amazing meat pies and samosas.<br/>
 </P>
 </DIV>
@@ -164,7 +162,7 @@ What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vint
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0017-thumb.jpg" alt="Andy B Goode at Norton Juxta Twycross"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0017-thumb.jpg" alt="Andy B Goode at Norton Juxta Twycross"></a></td>
 <td><DIV class="boxHeading">NORTON JUXTA TWYCROSS SUMMER VILLAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -176,7 +174,7 @@ I performed "Teenager in Love" live on the top local radio station TCR FM (<a hr
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Polesworth"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Polesworth"></a></td>
 <td><DIV class="boxHeading">WARWICKSHIRE AND ANTIQUE FAYRE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -187,11 +185,11 @@ Warwickshire and Antique Fayre (July): This was a great local vintage fayre in P
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0011-thumb.jpg" alt="Andy B Goode at Dosthill"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0011-thumb.jpg" alt="Andy B Goode at Dosthill"></a></td>
 <td><DIV class="boxHeading">DOSTHILL CHURCH VINTAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-St. Pauls Dosthill Summer Vintage Fete 2016: This was a classic British summer Fete in Dosthill at the pretty Church. Loads of stalls, barbeque and yummy cakes were available. Many friends came and I sang (avoiding the light showers). People joined in on some songs.<br/>
+St. Pauls Dosthill Summer Vintage Fete 2016: A classic British summer Fete in Dosthill at the pretty Church. Loads of stalls, a barbeque and yummy cakes were available. Many friends came and I sang lots of new songs (while avoiding the light showers). People joined in on some songs, which was lovely.<br/>
 </P>
 </DIV>
 
@@ -203,7 +201,7 @@ St. Pauls Dosthill Summer Vintage Fete 2016: This was a classic British summer F
 <!--
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
 <td><DIV class="boxHeading">TITLE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -230,7 +228,7 @@ info<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.6</li>
+<li>website: v2.1.7</li>
 </ul>
 </div>
 </div>
