Updated contact section to v2.1.7

--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
- Copyright (C) 2016 Andrew Brittons.
+ Copyright (C) 2016 Andrew Britton.
  All rights reserved
  -->
 <head>
@@ -74,7 +74,8 @@
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD>Here are two of my demo tracks:<br/>
-'Johnny B. Goode' and 'Earth Angel'.</TD></TR>
+'Johnny B. Goode' and 'Earth Angel'.<br/>
+Also my other vintage vocal group 'The Jays Vintage' demo track 'Don't Sit Under the Apple Tree'.</TD></TR>
 </TABLE>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -112,9 +113,22 @@ I find performing this song passionately very enjoyable.<br/>
 </DIV>
 
 
-</div>
-</div>
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/001_-_TheJaysVintage_-_Dont_Sit_Under_The_Apple_Tree.mp3" download><img class="boxImage" src="images/demoappletreeart.jpg" alt="Dont Sit Under The Apple Tree"></a></TD>
+<TD><DIV class="boxHeading">THE JAYS VINTAGE:<br/>DONT SIT UNDER THE APPLE TREE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Popularised by Glenn Miller and sung by the lovely Andrew Sisters in 1942, Don't Sit Under the Apple Tree (With Anyone Else But Me) has taken its place as a war time classic.<br/>
+Its top-tapping energy all the way with beautiful harmonies all the way.<br/>
+'The Jays Vintage' cover of this, aims to capture the feeling of that original.<br/>
+<a href="media/001_-_TheJaysVintage_-_Dont_Sit_Under_The_Apple_Tree.mp3" download>DOWNLOAD MP3: Dont Sit Under The Apple Tree</a>
+</P>
+</DIV>
 
+
+</div>
+</div>
 
 
 
@@ -122,17 +136,26 @@ I find performing this song passionately very enjoyable.<br/>
 <div id="contact" class="contact-area">
 <h2 class="banner">Contact me</h2>
 <div class="textbox-area">
-<ul>
-<li>Phone: 07415 338859</li>
-<li>email: Andy@AndyBGoode.com</li>
-<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.5</li>
+<DIV class="boxPanelNoBorder">
+<ul id="contactList">
+<li id="liPhone">Phone: 07415 338859</li>
+<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
+<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
+<li id="liWebsite">Version: v2.1.7</li>
 </ul>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><a href="http://www.TheJaysVintage.com"><img class="boxImageBigger" src="photos/thejays0012-thumb.jpg" alt="TheJaysVintage"></a></TD></TR>
+</TABLE>
+</DIV>
 </div>
 </div>
+
 
 </div>
 </body>
