--- a/songlist.html
+++ b/songlist.html
@@ -166,21 +166,29 @@ Michael Bublé: You've Got A Friend In Me<br/>
 
 
 
-
 <div id="contact" class="contact-area">
 <h2 class="banner">Contact me</h2>
 <div class="textbox-area">
-<ul>
-<li>Phone: 07415 338859</li>
-<li>email: Andy@AndyBGoode.com</li>
-<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.5</li>
+<DIV class="boxPanelNoBorder">
+<ul id="contactList">
+<li id="liPhone">Phone: 07415 338859</li>
+<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
+<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
+<li id="liWebsite">Version: v2.1.7</li>
 </ul>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><a href="http://www.TheJaysVintage.com"><img class="boxImageBigger" src="photos/thejays0012-thumb.jpg" alt="TheJaysVintage"></a></TD></TR>
+</TABLE>
+</DIV>
 </div>
 </div>
+
 
 </div>
 </body>
