--- a/videos.html
+++ b/videos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--
- Copyright (C) 2016 Andrew Brittons.
+ Copyright (C) 2016 Andrew Britton.
  All rights reserved
  -->
 <head>
@@ -161,6 +161,24 @@ I just keep singing songs from the 'Back to the Future' movie.</TD></TR>
 <br/>
 
 
+<DIV id="videoDemoAppleTree" class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">DONT SIT UNDER THE APPLE TREE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Many of these photos were taken at the lovely <a href="http://www.middleton-hall.co.uk/">Middleton Hall</a> near Tamworth by the talented <a href="https://www.facebook.com/pages/LJCreations/140122119344116">L. J. Creations</a> ... Many thanks!<br/>
+</P>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>I am delighted to share 'The Jays Vintage' demo track 'Don't Sit Under The Apple Tree', a wonderful hit released during the second world war by the Andrews Sisters.</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4bxYcisdlSM" frameborder="0" allowfullscreen></iframe>
+<br/>
 
 
 </div>
@@ -172,17 +190,26 @@ I just keep singing songs from the 'Back to the Future' movie.</TD></TR>
 <div id="contact" class="contact-area">
 <h2 class="banner">Contact me</h2>
 <div class="textbox-area">
-<ul>
-<li>Phone: 07415 338859</li>
-<li>email: Andy@AndyBGoode.com</li>
-<li>Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
-<li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
-<li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
-<li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.5</li>
+<DIV class="boxPanelNoBorder">
+<ul id="contactList">
+<li id="liPhone">Phone: 07415 338859</li>
+<li id="liEmail">email: <a href="mailto:Andy@AndyBGoode.com?Subject=Hi%20Andy" target="_top">Andy@AndyBGoode.com</a></li>
+<li id="liFacebook">Facebook: <a href="https://www.facebook.com/AndyBGoode">AndyBGoode</a></li>
+<li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
+<li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
+<li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
+<li id="liWebsite">Version: v2.1.7</li>
 </ul>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><a href="http://www.TheJaysVintage.com"><img class="boxImageBigger" src="photos/thejays0012-thumb.jpg" alt="TheJaysVintage"></a></TD></TR>
+</TABLE>
+</DIV>
 </div>
 </div>
+
 
 </div>
 </body>
