--- a/news.html
+++ b/news.html
@@ -114,14 +114,13 @@ Free Gigs: This year I am giving a few free gigs to local worthy causes (Hospice
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="Andy B Goode at Swadlincote"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0024-thumb.jpg" alt="Andy B Goode at Swadlincote"></a></td>
 <td><DIV class="boxHeading">SWADLINCOTE INTERNATIONAL FOOD AND DRINK FESTIVAL</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I will be performing at 11am.<br/>
-Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world.<br/>
-It's gonna be great.
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sun sung classic and people danced.<br/>
+It was energetic 1950s Rock n Roll and tasty food from all over the world...What more could you want?
 </P>
 </DIV>
 
