--- a/index.html
+++ b/index.html
@@ -155,14 +155,15 @@
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">Swadlincote International Food and Drink Festival</DIV></TD></TR>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0026-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">THE CHRISTMAS WARWICKSHIRE VINTAGE AND ANTIQUE FAYRE</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I will be performing from 11am.<br/>
-Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world.<br/>
-It's gonna be great.
+Saturday 26th Nov 2016 - 10am<br/>
+Polesworth Sports Centre, 10-2pm, £1 Entry (Kids Under 12 Free) 07762 546279<br/>
+I am singing some Xmas favourites at the local vintage and antique fayre in Polesworth.<br/>
+Do come along and snag Christmas bargain. Munch on delicious cakes while you listen to some Rock n Roll / Swing classics.<br/>
+Loads of vintage fashion (both used and new). Hunt through collectables and other unique stuff for some great presents.
 </P>
 </DIV>
 
