--- a/news.html
+++ b/news.html
@@ -119,7 +119,7 @@ Free Gigs: This year I am giving a few free gigs to local worthy causes (Hospice
 </TABLE>
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sun sung classic and people danced.<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I sung classic Rock and Crooner tunes while people danced in the street.<br/>
 It was energetic 1950s Rock n Roll and tasty food from all over the world...What more could you want?
 </P>
 </DIV>
