--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
 <P class='boxInfoArea'>
 Saturday 26th Nov 2016 - 10am<br/>
 Polesworth Sports Centre, 10-2pm,<br/>
-£1 Entry (Kids Under 12 Free) 07762 546279<br/>
+£1 Entry (Kids Under 12 Free)<br/>
+07762 546279<br/>
 I am singing some Xmas favourites at the local vintage and antique fayre in Polesworth.<br/>
 Do come along and snag a Christmas bargain. Munch on delicious cakes while you listen to some Rock n Roll / Swing classics.<br/>
 Loads of vintage fashion (both used and new). Hunt through collectables and other unique stuff for some great presents.
