--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 </TABLE>
 <P class='boxInfoArea'>
 <ul>
-<li>Available for: Birthdays, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
+<li>Available for: Birthdays, Weddings, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
 <li>I only use high quality backing tracks</li>
 <li>Fun 'Teddy boy' style outfit</li>
@@ -153,6 +153,7 @@
 <h2 id="highlights" class="banner">Highlights</h2>
 <div class="textbox-area">
 
+<!--
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0026-thumb.jpg" alt="AndyBGoode"></a></TD>
@@ -168,6 +169,24 @@ Do come along and snag a Christmas bargain. Munch on delicious cakes while you l
 Loads of vintage fashion (both used and new). Hunt through collectables and other unique stuff for some great presents.
 </P>
 </DIV>
+-->
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0007-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">LOUGHBOROUGH DOES VINTAGE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Saturday 12th Feb 2017 - 11-3pm - £1 Entry<br/>
+Rosebery St Peters Community Centre, Loughborough<br/>
+<a href="https://www.facebook.com/LoughboroughDoesVintage">LoughboroughDoesVintage</a> Vintage Fayre.<br/>
+I'll be singing Rock and Roll and Crooning some Love songs. 
+Also live entertainment from 'Eleanor Mattley'.<br/>
+Vintage stalls selling clothing, accessories, homewares. 
+Pop up tea room serving drinks, snacks and our popular Afternoon Teas (£8 for 2 people).<br/>
+Slip Tea while you listen to some Rock n Roll / Swing classics.
+</P>
+</DIV>
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
@@ -177,7 +196,8 @@ Loads of vintage fashion (both used and new). Hunt through collectables and othe
 <P class='boxInfoArea'>
 Right now, I am offering gigs starting at just:<br/>
 £100 + travel expenses for a 1h performance.<br/>
-Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/>
+<!--Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/> -->
+This could be used to bring some vintage fun to a 70th or 80th birthday.<br/>
 Limited time offer, Terms and conditions apply.
 </P>
 </DIV>
@@ -198,7 +218,7 @@ Limited time offer, Terms and conditions apply.
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.7</li>
+<li id="liWebsite">Version: v2.1.8</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -211,6 +231,16 @@ Limited time offer, Terms and conditions apply.
 </div>
 
 
+<div class="menu">
+<a href="index.html">Home</a>
+<a href="news.html">News</a>
+<a href="photos.html">Photos</a>
+<a href="music.html">Music</a>
+<a href="videos.html">Videos</a>
+<a href="songlist.html">Songs</a>
+<a href="testimonials.html">Testimonials</a>
+<a href="#contact">Contact</a>
+</div>
 
 
 </div>
