--- a/news.html
+++ b/news.html
@@ -88,16 +88,17 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
 </P>
 </DIV>
 
- 
+<!--
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/thejays0010-thumb.jpg" alt="Andy B Good at Christmas"></a></td>
 <td><DIV class="boxHeading">XMAS EVENTS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Xmas Party: I currently have space for some more Christmas gigs.... so book soon if you want your party to swing vintage style.<br/>
+Xmas Party: I currently have space for some more Christmas 2017 gigs.... so book soon if you want your party to swing vintage style.<br/>
 </P>
 </DIV>
+-->
 
 
 <DIV class="boxPanel">
@@ -106,7 +107,7 @@ Xmas Party: I currently have space for some more Christmas gigs.... so book soon
 <td><DIV class="boxHeading">SPECIAL OFFERS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Special Offer: Discounted gig pricing is currently available for 2016.<br/>
+Special Offer: Discounted gig pricing is currently available for 2017.<br/>
 Free Gigs: This year I am giving a few free gigs to local worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy Vintage Rock n Roll and Crooning.<br/>
 </P>
 </DIV>
@@ -227,7 +228,7 @@ info<br/>
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.7</li>
+<li id="liWebsite">Version: v2.1.8</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -239,6 +240,17 @@ info<br/>
 </div>
 </div>
 
+
+<div class="menu">
+<a href="index.html">Home</a>
+<a href="news.html">News</a>
+<a href="photos.html">Photos</a>
+<a href="music.html">Music</a>
+<a href="videos.html">Videos</a>
+<a href="songlist.html">Songs</a>
+<a href="testimonials.html">Testimonials</a>
+<a href="#contact">Contact</a>
+</div>
 
 
 </div>
