--- a/photos.html
+++ b/photos.html
@@ -521,7 +521,7 @@ function isPublishedNow(pubValue) {
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.7</li>
+<li id="liWebsite">Version: v2.1.8</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
@@ -531,6 +531,18 @@ function isPublishedNow(pubValue) {
 </TABLE>
 </DIV>
 </div>
+</div>
+
+
+<div class="menu">
+<a href="index.html">Home</a>
+<a href="news.html">News</a>
+<a href="photos.html">Photos</a>
+<a href="music.html">Music</a>
+<a href="videos.html">Videos</a>
+<a href="songlist.html">Songs</a>
+<a href="testimonials.html">Testimonials</a>
+<a href="#contact">Contact</a>
 </div>
 
 
