Event day correction

--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@ Loads of vintage fashion (both used and new). Hunt through collectables and othe
 <TD><DIV class="boxHeading">LOUGHBOROUGH DOES VINTAGE</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Saturday 12th Feb 2017 - 11-3pm - £1 Entry<br/>
-Rosebery St Peters Community Centre, Loughborough<br/>
+Sunday 12th Feb 11-3pm £1 Entry<br/>
+Rosebery St Peters Community Centre, Loughborough, LE11 5EQ<br/>
 <a href="https://www.facebook.com/LoughboroughDoesVintage">LoughboroughDoesVintage</a> Vintage Fayre.<br/>
 I'll be singing Rock and Roll and Crooning some Love songs. 
-Also live entertainment from 'Eleanor Mattley'.<br/>
+Also live entertainment from the talented <a href="https://www.facebook.com/EleanorSings">'Eleanor Mattley'</a>.<br/>
 Vintage stalls selling clothing, accessories, homewares. 
 Pop up tea room serving drinks, snacks and our popular Afternoon Teas (£8 for 2 people).<br/>
 Slip Tea while you listen to some Rock n Roll / Swing classics.
