--- a/music.html
+++ b/music.html
@@ -73,14 +73,21 @@
 <DIV class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD>Here are two of my demo tracks:<br/>
-'Johnny B. Goode' and 'Earth Angel'.<br/>
-Also my other vintage vocal group 'The Jays Vintage' demo track 'Don't Sit Under the Apple Tree'.</TD></TR>
+<TR><TD>Mp3 downloads of my recordings are here:<br/>
+<a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>'Johnny B. Goode'</a><br/>
+<a href="media/001_-_AndyBGoode_-_Let There Be Love.mp3" download>'Let There Be Love'</a><br/>
+<a href="media/002_-_AndyBGoode_-_You Make Me Feel So Young.mp3" download>'You Make Me Feel So Young'</a><br/>
+<a href="media/003_-_AndyBGoode_-_Earth Angel.mp3" download>'Earth Angel'</a><br/>
+<a href="media/004_-_AndyBGoode_-_LOVE.mp3" download>'L-O-V-E'</a><br/>
+<a href="media/005_-_AndyBGoode_-_Poetry in Motion.mp3" download>'Poetry in Motion'</a><br/>
+</TD></TR>
 </TABLE>
 </DIV>
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD>Click on the album art to start the download of the free mp3.</TD></TR>
+<TR><TD>I also am part of 'The Jays Vintage' a vocal harmony tribute group, so have included<br/>
+<a href="media/001_-_TheJaysVintage_-_Dont_Sit_Under_The_Apple_Tree.mp3" download>'Dont Sit Under The Apple Tree'</a>.<br/>
+Click on the album art to start the download of the free mp3.</TD></TR>
 </TABLE>
 </DIV>
 </DIV>
@@ -102,16 +109,68 @@ My cover of this aims to capture the feeling of that original.<br/>
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img class="boxImage" src="images/demoearthangelart.jpg" alt="Earth Angel"></a></TD>
+<TR><TD><a href="media/001_-_AndyBGoode_-_Let There Be Love.mp3" download><img class="boxImage" src="images/demolettherebelove.jpg" alt="Let There Be Love"></a></TD>
+<TD><DIV class="boxHeading">LET THERE BE LOVE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Originally from the 1940s and covered by many talented singers. My favourite is Nat King Cole's 1961 hit. His vocal tone just can't be matched.<br/>
+What a romantic song for lovers on a date night.<br/>
+"Someone to bless me, whenever I sneeze". Being there for the little things.<br/>
+<a href="media/001_-_AndyBGoode_-_Let There Be Love.mp3" download>DOWNLOAD MP3: Let There Be Love</a>
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/002_-_AndyBGoode_-_You Make Me Feel So Young.mp3" download><img class="boxImage" src="images/demoyoung.jpg" alt="You Make Me Feel So Young"></a></TD>
+<TD><DIV class="boxHeading">YOU MAKE ME FEEL SO YOUNG</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+One of my favourite Frank Sinatra classic crooning hits. From 1956 it really sums up the joyful feeling of a new relationship. You feel that can do anything.<br/>
+"Running across the meadows, picking up lots of forget-me-nots"<br/>
+<a href="media/002_-_AndyBGoode_-_You Make Me Feel So Young.mp3" download>DOWNLOAD MP3: You Make Me Feel So Young</a>
+</P>
+</DIV>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/003_-_AndyBGoode_-_Earth Angel.mp3" download><img class="boxImage" src="images/demoearthangelart.jpg" alt="Earth Angel"></a></TD>
 <TD><DIV class="boxHeading">EARTH ANGEL</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
 Also called 'Earth Angel (Will You Be Mine)', the penguins sang this smooth love song to great acclaim in 1954. It was also featured in the movie 'Back To The Future' while Marty was 'fading away'. What a classic!<br/>
 I find performing this song passionately very enjoyable.<br/>
-<a href="media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>DOWNLOAD MP3: Earth Angel</a>
+<a href="media/003_-_AndyBGoode_-_Earth Angel.mp3" download>DOWNLOAD MP3: Earth Angel</a>
 </P>
 </DIV>
 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/004_-_AndyBGoode_-_LOVE.mp3" download><img class="boxImage" src="images/demolove.jpg" alt="LOVE"></a></TD>
+<TD><DIV class="boxHeading">L-O-V-E</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+"Very extraordinary."<br/>
+Nat Kings Cole's original 1964 version of "L-O-V-E" is one of my personal favourites from this period.<br/>
+Try making your own list of positive qualities of your true love.<br/>
+Any song that helps you spell can't be bad.<br/>
+<a href="media/004_-_AndyBGoode_-_LOVE.mp3" download>DOWNLOAD MP3: L-O-V-E</a>
+</P>
+</DIV>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/005_-_AndyBGoode_-_Poetry in Motion.mp3" download><img class="boxImage" src="images/demopoetry.jpg" alt="Poetry in Motion"></a></TD>
+<TD><DIV class="boxHeading">POETRY IN MOTION</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+What do you call a chicken crossing the road.... Poultry in motion!<br/>
+"She doesn't need improvement, She's much too nice to rearrange".<br/>
+A hit in 1960 by Johnny Tillotson this conjures up images lovely girls moving beautifully with fluid grace steps.<br/>
+<a href="media/005_-_AndyBGoode_-_Poetry in Motion.mp3" download>DOWNLOAD MP3: Poetry in Motion</a>
+</P>
+</DIV>
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
@@ -144,7 +203,7 @@ Its top-tapping energy all the way with beautiful harmonies all the way.<br/>
 <li id="liInstagram">Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li id="liYouTube">YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li id="liTwitter">Twitter: <a href="http://www.twitter.com/AndyBGoode">@AndyBGoode</a></li>
-<li id="liWebsite">Version: v2.1.8</li>
+<li id="liWebsite">Version: v2.1.9</li>
 </ul>
 </DIV>
 <DIV class="boxPanelNoBorder">
