--- a/index.html
+++ b/index.html
@@ -173,23 +173,6 @@ Loads of vintage fashion (both used and new). Hunt through collectables and othe
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0007-thumb.jpg" alt="AndyBGoode"></a></TD>
-<TD><DIV class="boxHeading">LOUGHBOROUGH DOES VINTAGE</DIV></TD></TR>
-</TABLE>
-<P class='boxInfoArea'>
-Sunday 12th Feb 11-3pm £1 Entry<br/>
-Rosebery St Peters Community Centre, Loughborough, LE11 5EQ<br/>
-<a href="https://www.facebook.com/LoughboroughDoesVintage">LoughboroughDoesVintage</a> Vintage Fayre.<br/>
-I'll be singing Rock and Roll and Crooning some Love songs. 
-Also live entertainment from the talented <a href="https://www.facebook.com/EleanorSings">'Eleanor Mattley'</a>.<br/>
-Vintage stalls selling clothing, accessories, homewares. 
-Pop up tea room serving drinks, snacks and our popular Afternoon Teas (£8 for 2 people).<br/>
-Slip Tea while you listen to some Rock n Roll / Swing classics.
-</P>
-</DIV>
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
 <TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0019-thumb.jpg" alt="AndyBGoode"></a></TD>
 <TD><DIV class="boxHeading">SPECIAL OFFER:<br/>1 hour for £100</DIV></TD></TR>
 </TABLE>
@@ -199,6 +182,55 @@ Right now, I am offering gigs starting at just:<br/>
 <!--Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/> -->
 This could be used to bring some vintage fun to a 70th or 80th birthday.<br/>
 Limited time offer, Terms and conditions apply.
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageBigger" src="images/curlymagpie-thumb.jpg" alt="Curly Magpie"></a></td>
+<td><DIV class="boxHeading">VINTAGE AND HANDMADE FAIR</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Sunday 12th March 2017  11am-4pm<br/>
+Calke Abbey.<br/>
+I am singing at the '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a> Vintage and Handmade Fair'.
+Calke Abbey is a lovely venue so do come along.<br/>
+I am singing 12:30pm to 1pm, 2pm to 3pm + 30mins later.<br/>
+Live entertainment is also coming from lovely <a href="https://www.facebook.com/RebeccaJayneVocalist">'Rebecca Jayne'</a> and the skilled <a href="https://www.facebook.com/Kevin-Goodall-Saxophonist-Weddings-Parties-Corporate-Events-257905277660041/">'Kevin Goodall Saxophonist'</a>. 
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">SWINGING MOTHERS DAY AFTERNOON TEA</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Sunday 26th March 2pm till 6pm<br/>
+Old School Tea Rooms, 57 High Street, Ibstock, Leicestershire LE67 6LH.<br/>
+£15 Ticket (01530 267310).<br/>
+Listen to some Swing and Rock n Roll during Traditional Afternoon High Tea with a great selection of sandwiches, cakes and fancies plus teas and coffee.<br/>
+A most splendid '1916 Model T Ford' will be parked outside, so bring your camera.<br/>
+Come spend a lovely Mothering Sunday with us.
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="images/redandginger-thumb.jpg" alt="Red and Ginger"></a></TD>
+<TD><DIV class="boxHeading">GOOD FRIDAY TEA DANCE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Good Friday 14th April 6pm till 8:30pm<br/>
+Beaumont Centre, Coleorton, Leicestershire LE67 8HN £12 Ticket.<br/>
+Tickets selling fast.<br/>
+Book soon to avoid disapointment<br/>
+<a href="https://www.facebook.com/LoughboroughLoveVintage">LoughboroughLoveVintage</a> Vintage Tea Dance.<br/>
+I'll be singing Rock n Roll while <a href="https://www.facebook.com/DanceWithRedAndGinger">Red and Ginger</a> lead the dancing.<br/>
+Come dance with us.
 </P>
 </DIV>
 
