--- a/news.html
+++ b/news.html
@@ -115,6 +115,24 @@ Free Gigs: This year I am giving a few free gigs to local worthy causes (Hospice
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0027-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">LOUGHBOROUGH LOVES VINTAGE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Sunday 12th Feb 11-3pm<br/>
+Rosebery St Peters Community Centre, Loughborough, LE11 5EQ<br/>
+<a href="https://www.facebook.com/LoughboroughLovesVintage">LoughboroughLovesVintage</a> Vintage Fayre.<br/>
+A lovely little vintage afternoon.<br/>
+As it was nearly Valentines day week, I sang Rock and Roll and Crooning some Love songs. 
+Also live entertainment came from the talented <a href="https://www.facebook.com/EleanorSings">'Eleanor Mattley'</a>. 
+There were Vintage stalls selling: clothing, accessories, homewares. 
+The 'Pop up tea room' served amazing cakes, milkshakes and afternoon Teas.
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0024-thumb.jpg" alt="Andy B Goode at Swadlincote"></a></td>
 <td><DIV class="boxHeading">SWADLINCOTE INTERNATIONAL FOOD AND DRINK FESTIVAL</DIV></td></tr>
 </TABLE>
